# nf-fine-mapping

./: .gitignore  .gitmodules  .nf-core.yml  CITATIONS.md  CLAUDE.md  LICENSE  Makefile  main.nf  modules.json  nextflow.config  readme.md
.github/workflows/: collector-docker.yml  sushie-docker.yml
conf/: test.config
data_generation/: README.md  pyproject.toml
data_generation/outputs/1_205136853_A_G_set.parquet/: part-00000-72b16ab7-9569-4c12-890a-999e86e4c8ee-c000.snappy.parquet
data_generation/outputs/manifest/: manifest_1_205136853_A_G  manifest_example.tsv
data_generation/outputs/sushie_output/: test_output.sushie.cs.tsv
modules/LD-lookup/: ldlookup.py  main.nf
modules/collect/: main.nf
modules/collector/: main.nf
modules/intersect/: main.nf
modules/intersection/: main.nf
modules/ld/: main.nf
modules/sushie/: Dockerfile  main.nf
modules/transform/: main.nf
pipeline/: .nf-core.yml  CHANGELOG.md  CITATIONS.md  main.nf  nextflow_schema.json  ro-crate-metadata.json
pipeline/assets/: adaptivecard.json  email_template.html  email_template.txt  methods_description_template.yml  multiqc_config.yml  schema_input.json  sendmail_template.txt  slackreport.json
pipeline/conf/: base.config  test.config  test_full.config
pipeline/docs/: README.md  output.md  usage.md
pipeline/workflows/: finemapping.nf
testdata/: ld_reference.tsv  manifest.tsv
tests/: default.nf.test  nextflow.config
tools/collector/: Makefile  README.md  pyproject.toml
tools/collector/src/collector/: __init__.py
tools/collector/tests/collector/: test_cli.py
(+83 files in other folders)
